--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact Us</a>
               </li>
+              <li class="nav-item nav-social">
+                <a href="#" class="nav-link">
+                  <img src="images/fb.png" alt="">
+                </a>
+                <a href="#" class="nav-link">
+                  <img src="images/ins.png" alt="">
+                </a>
+                <a href="#" class="nav-link">
+                  <img src="images/tw.png" alt="">
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -471,5 +482,6 @@
 
     <!-- Include Script  -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/custom.js"></script>
 </body>
 </html>
